more fixes on text align

--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ html {
   background-repeat: no-repeat;
   height: 100%;
   flex: 0 0 6%;
-  transition: flex 1.5s ease;
+  transition: flex 2.5s ease;
   position: relative;
   cursor: pointer;
 }
@@ -40,7 +40,19 @@ html {
   background: transparent linear-gradient(180deg, #000000 0%, #00000000 100%) 0% 0% no-repeat padding-box;
 }
 
-.text-container {
+.fixed-text {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  color: #fff;
+  opacity: 0;
+  transition: opacity 1.5s ease-in;
+  z-index: 10;
+}
+
+/* .text-container {
   position: absolute;
   display: flex;
   flex-direction: column;
@@ -54,27 +66,88 @@ html {
   z-index: 10;
   min-height: 500px;
   min-width: 600px;
+} */
+
+.title {
+  font-family: "Bebas Neue", sans-serif;
+  font-size: 14px;
+  letter-spacing: 9.52px;
+  color: #fff;
+  margin-bottom: 19px;
+  opacity: 1;
+}
+
+/* .title {
+  font-family: "Bebas Neue", sans-serif;
+  font-size: 14px;
+  letter-spacing: 9.52px;
+  margin-left: 3px;
+  margin-bottom: 19px;
+} */
+
+.description {
+  font-family: "Poppins", Medium;
+  font-size: 55px;
+  margin-bottom: 31px;
+  line-height: 1;
+  letter-spacing: 0px;
+  text-shadow: 0px 0px 16px #0000005c;
+  opacity: 1;
+}
+
+/* .description {
+  font-family: "Poppins", Medium;
+  font-size: 55px;
+  text-shadow: 0px 0px 16px #0000005c;
+  line-height: 1;
+  margin-bottom: 31px;
+} */
+
+.fixed-text .button-container {
+  display: flex;
+  justify-content: center;
+  gap: 15px;
+}
+
+.fixed-text .btn {
+  font-family: "Poppins", Medium;
+  font-size: 14px;
+  width: 120px;
+  height: 40px;
+  background: transparent;
+  border: 1px solid #fff;
+  border-radius: 7px;
+  color: #fff;
+  cursor: pointer;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.fixed-text .btn:hover {
+  background-color: #fff;
+  color: black;
+}
+
+.text-container {
+  position: fixed;
+  top: 30%;
+  left: 20%;
+  text-align: left;
+  color: #fff;
+  z-index: 10;
+  transition: opacity 1.5s ease-in-out;
 }
 
 .slide.active .text-container {
   opacity: 1;
 }
 
-.title {
-  font-family: "Bebas Neue", sans-serif;
-  font-size: 14px;
-  letter-spacing: 9.52px;
-  margin-left: 3px;
-  margin-bottom: 19px;
-}
-
-.description {
+/* .description {
   font-family: "Poppins", Medium;
-  font-size: 55px;
+  font-size: 40px;
   text-shadow: 0px 0px 16px #0000005c;
-  line-height: 1;
+  line-height: 1.2;
   margin-bottom: 31px;
-}
+} */
 
 .button-container {
   display: flex;
@@ -104,7 +177,7 @@ html {
   color: black;
 }
 
-.number {
+/* .number {
   font-family: "Bebas Neue", sans-serif;
   font-size: 20px;
   font-weight: normal;
@@ -122,6 +195,17 @@ html {
   text-shadow: none;
   background-color: transparent;
   transition: all 0.5s ease;
+} */
+
+.number {
+  font-family: "Bebas Neue", sans-serif;
+  font-size: 24px;
+  position: absolute;
+  bottom: 10%;
+  left: 10px;
+  color: #fff;
+  cursor: pointer;
+  opacity: 1;
 }
 
 .slide.active .number {
@@ -160,7 +244,7 @@ html {
 
 .horizontal-line {
   position: absolute;
-  top: 31%;
+  top: 33%;
   width: 100px;
   height: 2px;
   background-color: #21e26e;
